--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.web.resources.static-locations=D:\Fpoly\DATN\RunFlex\RunFlex\images
+
 
