--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.web.resources.static-locations=D:\Fpoly\DATN\RunFlex\RunFlex\images
-
-
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.resources.static-locations=file:D:\DATN\RunFlex_DATN\assets\images\Kho_Anh
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true   
