--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ jwt.expiration=2592000000
 #spring.main.allow-bean-definition-overriding=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.orm.connections.pooling=ERROR
+cloudinary.cloud_name=dvdgvw0lj
+cloudinary.api_key=692175494138253
+cloudinary.api_secret=LFw5m6lcJDVsHO05S2Iy0TFwv_0
